--- a/templates/snippets/home.html
+++ b/templates/snippets/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <article class="mw7 center ph3 ph5-ns tc br2 pv5 bg-washed-yellow dark-pink mb5">
   <h1 class="fw6 f3 f2-ns lh-title mt0 mb3">
-    Your Music. Organized like never before.
+    Your code, geek. Organized like never before.
   </h1>
   <h2 class="fw2 f4 lh-copy mt0 mb3">
     This will change things. And we want you to be involved. This text needs to
