--- a/templates/snippets/show_snippet.html
+++ b/templates/snippets/show_snippet.html
@@ -33,7 +33,18 @@
   </div>
   {% endif %}
 
+  {% if snippet.user %}
+  <div class="flex">
+    <div class="pr2"><i class="icofont-ui-email"></i></div>
+    <div>{{ snippet.user }}</div>
+  </div>
+  {% endif %}
+
   <p>
+    {% if snippet.original_snippet %}
+    <a href="{% url 'show_snippet' pk=snippet.original_snippet.pk %}">Original Snippet</a><br>
+    {% endif %}
+    <a class="red" href="{% url 'copy_snippet' pk=snippet.pk %}">Copy Snippet</a><br>
     <a href="{% url 'edit_snippet' pk=snippet.pk %}">Edit Snippet</a><br>
     <a class="red" href="{% url 'delete_snippet' pk=snippet.pk %}">Delete Snippet</a>
   </p>
