--- a/templates/snippets/list_snippets.html
+++ b/templates/snippets/list_snippets.html
@@ -15,7 +15,7 @@
     {% if snippet.code %}
     <div class="flex">
       <div class="pr2"><i class="icofont-phone"></i></div>
-      <div>{{ snippet.code }}</div>
+      <div><pre><code>{{ snippet.code }}</code></pre></div>
     </div>
     {% endif %}
 
@@ -47,10 +47,12 @@
     </div>
     {% endif %}
 
+    {% if user == snippet.user %}
     <p>
       <a href="{% url 'edit_snippet' pk=snippet.pk %}">Edit Snippet</a><br>
       <a class="red" href="{% url 'delete_snippet' pk=snippet.pk %}">Delete Snippet</a>
     </p>
+    {% endif %}
   </div>
   {% endfor %}
 </div>
