--- a/templates/snippets/show_snippet.html
+++ b/templates/snippets/show_snippet.html
@@ -1,3 +1,4 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
 {% extends "base.html" %}
 
 {% block content %}
@@ -8,7 +9,7 @@
   {% if snippet.code %}
   <div class="flex">
     <div class="pr2"><i class="icofont-phone"></i></div>
-    <div>{{ snippet.code }}</div>
+    <div><pre><code>{{ snippet.code }}</code></pre></div>
   </div>
   {% endif %}
 
@@ -40,13 +41,21 @@
   </div>
   {% endif %}
 
+  <button class="btn" data-clipboard-text="{{  snippet.code  }}">
+    Copy to clipboard
+  </button>
+  <script> 
+    var clip = new ClipboardJS('.btn'); 
+  </script>
   <p>
     {% if snippet.original_snippet %}
     <a href="{% url 'show_snippet' pk=snippet.original_snippet.pk %}">Original Snippet</a><br>
     {% endif %}
     <a class="red" href="{% url 'copy_snippet' pk=snippet.pk %}">Copy Snippet</a><br>
+    {% if user == snippet.user %}
     <a href="{% url 'edit_snippet' pk=snippet.pk %}">Edit Snippet</a><br>
     <a class="red" href="{% url 'delete_snippet' pk=snippet.pk %}">Delete Snippet</a>
+    {% endif %}
   </p>
 </div>
 {% endblock %}
