added gravatar, added links for profile page and back links

--- a/templates/snippets/add_snippet.html
+++ b/templates/snippets/add_snippet.html
@@ -8,7 +8,9 @@
     {% csrf_token %}
     {{ form.as_p }}
     <div>
-      <button type="submit">Add Snippet</button>
+      <button type="submit">Add Snippet</button><br>
+      <br>
+      <a class="red" href="{% url 'list_snippets' %}">Snippets List</a><br>
     </div>
   </form>
 </div>
