--- a/templates/snippets/show_snippet.html
+++ b/templates/snippets/show_snippet.html
@@ -8,35 +8,35 @@
 
   {% if snippet.code %}
   <div class="flex">
-    <div class="pr2"><i class="icofont-phone"></i></div>
+    <div class="pr2"><i class="snip"></i></div>
     <div><pre><code>{{ snippet.code }}</code></pre></div>
   </div>
   {% endif %}
 
   {% if snippet.description %}
   <div class="flex">
-    <div class="pr2"><i class="icofont-ui-email"></i></div>
+    <div class="pr2"><i class="snip"></i></div>
     <div>{{ snippet.description }}</div>
   </div>
   {% endif %}
 
   {% if snippet.language %}
   <div class="flex">
-    <div class="pr2"><i class="icofont-ui-email"></i></div>
+    <div class="pr2"><i class="snip"></i></div>
     <div>{{ snippet.language }}</div>
   </div>
   {% endif %}
 
   {% if snippet.date_added %}
   <div class="flex">
-    <div class="pr2"><i class="icofont-ui-email"></i></div>
+    <div class="pr2"><i class="snip"></i></div>
     <div>{{ snippet.date_added }}</div>
   </div>
   {% endif %}
 
   {% if snippet.user %}
   <div class="flex">
-    <div class="pr2"><i class="icofont-ui-email"></i></div>
+    <div class="pr2"><i class="snip"></i></div>
     <div>{{ snippet.user }}</div>
   </div>
   {% endif %}
@@ -51,7 +51,8 @@
     {% if snippet.original_snippet %}
     <a href="{% url 'show_snippet' pk=snippet.original_snippet.pk %}">Original Snippet</a><br>
     {% endif %}
-    <a class="red" href="{% url 'copy_snippet' pk=snippet.pk %}">Copy Snippet</a><br>
+    <a class="red" href="{% url 'list_snippets' %}">Snippets List</a><br>
+    <a class="red" href="{% url 'copy_snippet' pk=snippet.pk %}">Make a Copy</a><br>
     {% if user == snippet.user %}
     <a href="{% url 'edit_snippet' pk=snippet.pk %}">Edit Snippet</a><br>
     <a class="red" href="{% url 'delete_snippet' pk=snippet.pk %}">Delete Snippet</a>
