fixed date fields, autosave user to snippets, stylying, partialized snippets

--- a/templates/snippets/home.html
+++ b/templates/snippets/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<article class="mw7 center ph3 ph5-ns tc br2 pv5 bg-light-gray dark-green mb5">
+<br><article class="mw7 center ph3 ph5-ns tc br2 pv5 bg-light-gray dark-green mb5">
   <h1 class="fw6 f3 f2-ns lh-title mt0 mb3">
     Welcome to the Code Snippet Manager.
   </h1>
@@ -16,5 +16,6 @@
       Sign Up
     </a>
   </div>
+  <br><img class="db ba b--black-10 center" src="static/images/snipimage.png">
 </article>
 {% endblock content %}
