fixed date fields, autosave user to snippets, stylying, partialized snippets

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
-<body class="sans-serif pv3 ph2">
-  <nav class="flex justify-end bb bg-light-green b--white-10">
+<body class="avenir pv3 ph2">
+  <nav class="flex justify-end bw3 ba bg-light-green b--white-90">
     <div class="flex-grow pa3 flex items-center">
       {% if user.is_authenticated %}
       {% load gravatar %}
