--- a/templates/snippets/list_snippets.html
+++ b/templates/snippets/list_snippets.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>All Snippets</h1>
+<div class="green">
+  <h1>All Snippets</h1>
+</div>
 
 <p><a href="{% url 'add_snippet' %}">Add New Snippet</a></p>
 <p><a href="{% url 'profile' %}">Profile Page</a></p>
