--- a/templates/snippets/snippet_partial.html
+++ b/templates/snippets/snippet_partial.html
@@ -1,6 +1,6 @@
 {% block content %}
 
-<div class="w-20 pa3 b--dashed ma1">
+<div class="w-20 pa3 b--green b--dashed bg-washed-green ma1">
     <a href="{% url 'show_snippet' pk=snippet.pk %}">
       <h2>{{ snippet.title }}</h2>
     </a>
