--- a/templates/base.html
+++ b/templates/base.html
@@ -15,17 +15,17 @@
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class="avenir pv3 ph2">
-  <nav class="flex justify-end bw3 ba bg-light-green b--white-90">
+  <nav class="flex justify-end bw3 ba bg-light-green b--green">
     <div class="flex-grow pa3 flex items-center">
       {% if user.is_authenticated %}
       {% load gravatar %}
 
       {% gravatar user.email 70 "user@example.com" 'br3 mr3' %}
-      <p class="mr4 serif i white">You are logged in as {{ user.username }}</p>
-      <a class="f6 link dib white dim mr3 mr4-ns" href={% url 'auth_logout' %}>Log Out</a>
+      <p class="mr4 serif i green">You are logged in as {{ user.username }}</p>
+      <a class="f6 link dib green dim mr3 mr4-ns" href={% url 'auth_logout' %}>Log Out</a>
       {% else %}
-      <a class="f6 link dib white dim mr3 mr4-ns" href={% url 'auth_login' %}>Log In</a>
-      <a class="f6 dib white bg-animate hover-bg-white hover-black no-underline pv2 ph4 br-pill ba b--white-20" href={% url 'registration_register' %}>Register</a>
+      <a class="f6 link dib green dim mr3 mr4-ns" href={% url 'auth_login' %}>Log In</a>
+      <a class="f6 dib green bg-animate hover-bg-white hover-black no-underline pv2 ph4 br-pill ba b--white-20" href={% url 'registration_register' %}>Register</a>
       {% endif %}
     </div>
   </nav>
