--- a/templates/snippets/add_snippet.html
+++ b/templates/snippets/add_snippet.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Add Snippet</h1>
+<div class="green">
+  <h1>Add Snippet</h1>
+</div>
 
 <div>
   <form action="{% url 'add_snippet' %}" method="POST">
