--- a/templates/snippets/delete_snippet.html
+++ b/templates/snippets/delete_snippet.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Delete Snippet</h1>
-
+<div class="green">
+  <h1>Delete Snippet</h1>
+</div>
 <div>
   <form action="{% url 'delete_snippet' pk=snippet.pk %}" method="POST">
     {% csrf_token %}
