--- a/templates/snippets/profile.html
+++ b/templates/snippets/profile.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Profile of {{ user.username }}</h1>
+<div class="green">
+    <h1>Profile of {{ user.username }}</h1>
+</div>
 {% load gravatar %}
 
-{% gravatar user.email 100 "user@example.com" %}
+{% gravatar user.email 100 "user@example.com" 'br-100' %}
+<br>
+<br><a class="red" href="{% url 'list_snippets' %}">Snippets List</a><br>
 
 <br>
 {% for snippet in user.snippets.all %}
@@ -14,7 +18,6 @@
 {% include "snippets/snippet_partial.html" with snippet=snippet %}
 {% endfor %}
 
-<br><a class="red" href="{% url 'list_snippets' %}">Snippets List</a><br>
 
 
 
