--- a/templates/snippets/list_snippets.html
+++ b/templates/snippets/list_snippets.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h1>All Snippets</h1>
+<form action="{% url 'search_snippets' %} "class="list-sort-button second" method="GET">
+  <input name="search_string" type="text" placeholder="Search here">
+</form>
+
 
 <p><a href="{% url 'add_snippet' %}">Add New Snippet</a></p>
 
