actual search implementation

--- a/templates/snippets/list_snippets.html
+++ b/templates/snippets/list_snippets.html
@@ -4,6 +4,9 @@
 <div class="green">
   <h1>All Snippets</h1>
 </div>
+<form action="{% url 'search_snippets' %} "class="list-sort-button second" method="GET">
+  <input name="search_string" type="text" placeholder="Search here">
+</form>
 
 <p><a href="{% url 'add_snippet' %}">Add New Snippet</a></p>
 <p><a href="{% url 'profile' %}">Profile Page</a></p>
@@ -13,4 +16,5 @@
   {% include "snippets/snippet_partial.html" with snippet=snippet %}
   {% endfor %}
 </div>
+<br><a class="red" href="{% url 'list_snippets' %}">Snippets List</a><br>
 {% endblock %}
