--- a/templates/snippets/home.html
+++ b/templates/snippets/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br>
-<br><article class="mw7 center ph3 ph5-ns tc br2 pv5 bg-light-gray dark-green mb5">
+<br><article class="b--green mw7 center ph3 ph5-ns tc br2 pv5 bg-light-gray dark-green mb5">
   <h1 class="fw6 f3 f2-ns lh-title mt0 mb3">
     Welcome to the Code Snippet Manager.
   </h1>
